--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,13 @@
-<h1>List of all users</h1>
+<section class='userList'>
+  <% @users.each do |user| %>
+    <div class='userCard'>
+      <div>
+        <%= image_tag user.photo, alt: user.name, class: 'userPhoto' %>
+      </div>
+      <div class='userInfo'>
+        <h2 class='userHead'><%= link_to user.name, user_path(user)%></h2>
+        <p>Number of posts: <%= user.posts_counter.nil? ? 0 : user.posts_counter %></p>
+      </div>
+    </div>
+  <% end %>  
+</section>
