--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,7 @@
     </div>
   </div>
   <div class='userPosts'>
+  <button class='btn'><%= link_to 'Add new post', new_user_post_path %></button>
     <% @posts.each do |post| %>
       <div class='userPost'>
         <h4><%= link_to post.title, user_post_path(@user, post) %></h4>
