--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,10 @@
       </div>
       <% unless post.recent_comments.empty? %>
         <div class='postComments'>
-          <% post.recent_comments.each do |comment| %>
+          <%# 
+            First POST -> COMMENTS -> USER_ID
+           %>
+          <% post.recent_comments.includes(:user).each do |comment| %>
             <p><%= comment.user.name %>: <%= comment.text %></p>
           <% end %>
         </div>
