Add post show spec

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <section class='posts'>
   <div class='userCard'>
     <div>
-      <img src=<%= @user.photo %> alt='User Photo' class='userPhoto>
+      <img src=<%= @user.photo %> alt='User Photo' class='userPhoto'>
     </div>
     <div class='userInfo'>
       <h2 class='userHead'><%= @user.name %></h2>
