--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <section class='postDetail'>
   <div class='userPost'>
-    <h4><%= @post.title %></h4>
+    <h4><%= @post.title %> - <%= @post.author.name %></h4>
     <p class='comlik'>Comments: <%= @post.comments_counter.nil? ? 0 : @post.comments_counter %>, Likes: <%= @post.likes_counter.nil? ? 0 : @post.likes_counter %></p>
     <p><%= @post.text %></p>
   </div>
