--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
         <img src=<%= user.photo %> alt='User Image' class='userPhoto'>
       </div>
       <div class='userInfo'>
-        <h2 class='userHead'><a href=<%= user_path(user)%>><%= user.name %></h2>
+        <h2 class='userHead'><a href=<%= user_path(user)%>><%= user.name %></a></h2>
         <p>Number of posts: <%= user.posts_counter.nil? ? 0 : user.posts_counter %></p>
       </div>
     </div>
