--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <section class='userDetail'>
+  <button class='btn'><%= link_to 'Back', root_path %></button>
   <div class='userCard'>
     <div>
       <img src=<%= @user.photo %> alt='User Image' class='userPhoto'>
