--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <section class='posts'>
+  <button class='btn'><%= link_to 'Back', user_path(@user) %></button>
   <div class='userCard'>
     <div>
       <img src=<%= @user.photo %> alt='User Photo' class='userPhoto'>
