--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <section class='userList'>
+  <h1>List of Users</h1>
   <% @users.each do |user| %>
     <div class='userCard'>
       <div>
@@ -9,5 +10,5 @@
         <p>Number of posts: <%= user.posts_counter.nil? ? 0 : user.posts_counter %></p>
       </div>
     </div>
-  <% end %>  
+  <% end %>
 </section>
