--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <section class='userList'>
   <h1>List of Users</h1>
+  <%= button_to "logout", destroy_user_session_path, :class => 'btn', method: :delete  %>
   <% @users.each do |user| %>
     <div class='userCard'>
       <div>
