--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class='userPosts'>
-  <% if @user == current_user %>
+  <% if @user == current_user || @user.admin? %>
     <button class='btn'><%= link_to 'Add new post', new_user_post_path %></button>
   <% end %>
     <% @posts.each do |post| %>
